# esoraider-server

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.MD  debug.sh  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  run.sh  setup.cfg
.github/workflows/: build-and-deploy.yaml  build-container.yaml  build-prd.yaml  deploy-swarm.yaml  deploy.yaml
docker/: docker-compose.prod.yml
docker/blacksheep/: Dockerfile  gunicorn.sh  gunicorn_config.py
docker/caddy/: Caddyfile
esoraider-server/: app.py  debug.sh  run.sh  settings.py
esoraider-server/analysis/: data_request.py  report_builder.py  stacks.py  tracked_info.py  uptimes.py
esoraider-server/api/: api.py  response.py
esoraider-server/data/: buffs.py  core.py  debuffs.py  encounters.py  glyphs.py  passives.py  races.py  rules.py  sets.py  stacks.py
esoraider-server/data/classes/: dragonknight.py  general.py  necromancer.py  nightblade.py  sorcerer.py  templar.py  warden.py
esoraider-server/data/classes/dragonknight/: buffs.py  debuffs.py  skills.py
esoraider-server/data/classes/necromancer/: buffs.py  debuffs.py  passives.py  skills.py
esoraider-server/data/classes/nightblade/: buffs.py  debuffs.py  skills.py
esoraider-server/data/classes/sorcerer/: debuffs.py  skills.py
esoraider-server/data/classes/templar/: debuffs.py  skills.py
esoraider-server/data/classes/warden/: debuffs.py  skills.py
esoraider-server/esologs/: api.py  consts.py
esoraider-server/esologs/responses/: base.py  common.py
esoraider-server/esologs/responses/report_data/: casts.py  effects.py  fight.py  graph.py  report.py  summary.py
esoraider-server/esologs/responses/world_data/: encounter.py
esoraider_server/: app.py  dependencies.py  settings.py  usecases.py
esoraider_server/analysis/: checklist_builder.py  data_request.py  exceptions.py  report_builder.py  stacks.py  tracked_info.py  uptimes.py
esoraider_server/data/: buffs.py  core.py  debuffs.py  encounters.py  glyphs.py  passives.py  races.py  repository.py  rules.py  sets.py  stacks.py
esoraider_server/data/classes/: general.py
esoraider_server/data/classes/arcanist/: buffs.py  debuffs.py  skills.py
esoraider_server/data/classes/dragonknight/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/data/classes/necromancer/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/data/classes/nightblade/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/data/classes/sorcerer/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/data/classes/templar/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/data/classes/warden/: buffs.py  debuffs.py  passives.py  skills.py
esoraider_server/esologs/: api.py  base.py  consts.py  converters.py  exceptions.py
esoraider_server/esologs/responses/: base.py  common.py  core.py
esoraider_server/esologs/responses/report_data/: casts.py  effects.py  fight.py  graph.py  log.py  report.py  summary.py
esoraider_server/esologs/responses/world_data/: encounter.py
tests/: conftest.py  test_server_responses.py
tests/files/: encounter_44.json  log_MRrz4bhfc8FGxmBT.json  log_XmB7YQbrjD6p8x4n-12-start-end.json  log_XmB7YQbrjD6p8x4n-35-2-targets.json  log_XmB7YQbrjD6p8x4n-35-2.json  log_XmB7YQbrjD6p8x4n-97.json  log_a-xJa4CgrcfvLFdVKT-3.json  log_a-xJa4CgrcfvLFdVKT-5.json  log_a-xJa4CgrcfvLFdVKT.json
