[tool.poetry]
name = "esoraider-server"
version = "0.1.0"
description = ""
authors = ["Dreemurro <dr33murro@gmail.com>"]
readme = "README.MD"
packages = [{ include = "esoraider_server" }]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
aioauth-client = "0.29.0" 
dataclasses-json = "0.5.7"
gql = { extras = ["aiohttp"], version = "3.5.0" }
gunicorn = "23.0.0"
litestar = { extras = ["standard"], version = "2.13.0" }
loguru = "0.6.0"
msgspec = "0.18.6"
portion = "2.3.1"
python-dotenv = "0.21.1"
uvicorn = "0.32.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
isort = "*"
mypy = "*"
nitpick = "*"
wemake-python-styleguide = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 80
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-v -rP"
asyncio_default_fixture_loop_scope = "session"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
