[tool.poetry]
name = "esoraider-server"
version = "0.1.0"
description = ""
authors = ["Dreemurro <dr33murro@gmail.com>"]
readme = "README.MD"
packages = [{ include = "esoraider_server" }]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
aioauth-client = "0.29.0" 
gql = { extras = ["aiohttp"], version = "3.5.0" }
granian = "1.7.1"
litestar = { extras = ["standard"], version = "2.13.0" }
msgspec = "0.18.6"
portion = "2.3.1"
python-dotenv = "0.21.1"
structlog = "24.4.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
isort = "*"
mypy = "*"
ruff = "*"
wemake-python-styleguide = "*"
# For debugging
granian = {extras = ["reload"], version = "1.7.1"}

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 80
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-v -rP --cov=esoraider_server"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
